# litestar-asyncpg

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_RESTRUCTURE.md  README.md  app.py  pre-commit.yaml  pyproject.toml  requirements.txt  run_tests.sh  settings.py
config/: plugin.py
config/exception/: main.py
config/plugin/: asyncpg.py
config/sql/: tables.sql
sql/: migration.sql
src/app/: __about__.py  __init__.py  __main__.py  asgi.py  main.py
src/app/config/: app.py  base.py  constants.py  utils.py
src/app/lib/: deps.py  dto.py  exceptions.py  guards.py  schema.py
src/app/server/: auth.py  config.py  core.py  events.py  lifespan.py  middleware.py  plugins.py  stores.py
src/application/interfaces/: use_cases.py
src/application/use_cases/: __init__.py  authenticate_user.py  create_team.py  list_teams.py  register_user.py  team_use_case.py  user_use_case.py
src/channels/: main.py
src/controller/: players.py
src/controllers/: auth.py  players.py  root.py  teams.py  users.py
src/core/config/: __init__.py  settings.py
src/core/di/: __init__.py  container.py  containers.py
src/core/exceptions/: __init__.py  main.py
src/core/logging/: config.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  base.py  common.py  team.py  token.py  user.py
src/domain/interfaces/: repositories.py  session_repository.py  team_repository.py  user_repository.py
src/events/: main.py
src/guards/: main.py
src/infrastructure/adapters/: __init__.py  litestar_asyncpg_adapter.py  litestar_config_adapter.py  litestar_events_adapter.py
src/infrastructure/database/: asyncpg.py  connection.py
src/infrastructure/repositories/: __init__.py  asyncpg_session_repository.py  asyncpg_team_repository.py  asyncpg_user_repository.py  team_repository.py  user_repository.py
src/middleware/: factory.py  lifespan.py
src/middlewares/: auth.py  factory.py  lifespan.py  utils.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py
src/presentation/channels/: main.py
src/presentation/controllers/: __init__.py  auth_controller.py  (+3 more)
src/stores/: main.py
src/structs/: main.py
tests/: __init__.py  test_app.py  test_team.py  test_user_auth.py
(+51 files in other folders)
