[project]
name = "litestar-asyncpg-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Fontella", email = "yurifc4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "litestar[standard] (>=2.17.0,<3.0.0)",
    "litestar-asyncpg (>=0.5.0,<1.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "dependency-injector (>=4.41.0,<5.0.0)",
    "poetry-core (>=2.1.3)",
    "structlog (>=25.4.0,<26.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.12"
pre-commit = "^4.3.0"
poetry-core = "^2.1.3"

[build-system]
requires = ["poetry-core>=2.1.3,<3.0.0"]
build-backend = "poetry.core.masonry.api"
